--- a/Assignment2.rmd
+++ b/Assignment2.rmd
@@ -26,6 +26,10 @@ library(car)
 
 # Findings
 
+From the modelling approach taken in this report and our preliminary EDA we have determined that the major determinants in of high mortality rates in the US, as well as key predictors in modelling the mortality rate are: incidence rate, log of median income, poverty percent, percent employed and unemployed 16 and over, percent private, publci and employee provided private coverage, log of percent black, education levels and percent married households and percent married. From the list above we see that there are variables that measure similar or opposite quantities such as percent employed and percent unemployed 16 and over. Thus during the modelling process we will take caution with similar variables to ensure we keep the explanatory power of the model.
+
+We do see examples of counties that do not conform to the general pattern with unusually high or low mortality rates. One example we have is 'Williamsburg City, Virginia' where we see a high incidence rate of 1014 yet a comparatively small death rate of 162, however we see that it's percent private coverage is 19% above the US average and the median male and female ages of 26 and 24 respectively are considerably lower than the median US ages, potentially being causes for this low death rate. Another county with an unsusually high mortality rate is 'Union County, Florida' where we see a death rate of 363 which is 168 above the upper quartile (75% of data points). Here we see a higher than average poverty percent and a lower than average education level being possible causes but not fully explaining the drastically high death rate level and similarly high incidence rate of 1207. We also see a slighlty less but still unusual value for 'Charlottseville City, Virginia' with a high incidence rate of 719, but again a comparatively low death rate of 178. In the other case we saw this was also in Virginia and again we see a higher than average percent private coverage, 4% higher than the upper quartile, again potentially being the cause for a high incidence rate but low death rate. Conversely, we see an unsuaully low death rate of 60 in 'Pitkin County, Colorado', however this can be explained by a high median income and percent private coverage.
+
 # Statistical Methodology
 
 ```{r loadData, include=FALSE}
