--- a/Assignment2.rmd
+++ b/Assignment2.rmd
@@ -115,17 +115,15 @@ plot(lm(deathRate~PctEmpPrivCoverage,data=cancer),1)
 
 ## Modelling Approach and Variable Selection
 
-### AIC Forward and Backward Variable Selection
+### AIC and BIC Forward and Backward Variable Selection
 
-We perform forward, backward and hybrid stepwise regression according to both AIC and BIC. We see that the models generated for AIC are all the same and ones generated for BIC are al the same. In the AIC case we have the model has 14 parameters, whereas the BIC model has 11 variables. 
+We perform forward, backward and hybrid stepwise regression according to both AIC and BIC. We see that the models generated for AIC are all the same and ones generated for BIC are al the same. In the AIC case we have the model has 12 parameters, whereas the BIC model has 11 variables. 
 
 ```{r stepwise, include=FALSE}
 # Below we perform stepwise regression for both AIC and BIC
-
 # cancermodel = cancer[,-c(1,3,15)]
 cancermodel <- cancer %>% select(
   !c("Geography", "medIncome", "binnedInc", "PctBlack"))
-
 c0=lm(deathRate~1,cancermodel)
 cmax=lm(deathRate~.,cancermodel)
 forwardoptimalAIC = step(c0,direction="forward",
@@ -140,7 +138,6 @@ backwardoptimalBIC = step(cmax,direction="backward",
 scope=list("lower"=c0,"upper"=cmax),trace=0,k=log(3044))
 hybridoptimalBIC = step(c0,direction="both",
 scope=list("lower"=c0,"upper"=cmax),trace=0,k=log(3044))
-
 ```
 
 From the summary output we see that for the AIC model all coefficients have strong evidence that they are different from zero other than Percent Unemployed 16 and Over and Percent Public Coverage. For the BIC model these variables are not in the model and further from the summary output we see with strong evidence that all the coefficients are different from zero. From observing the output we see that we would expect there to be multicollinearity in these models due to variables that measure similar or opposite quantities, for example Percent Married and Percent Married Households.
@@ -149,44 +146,20 @@ From the summary output we see that for the AIC model all coefficients have stro
 # We compute the summaries of the stepwise models
 summary(hybridoptimalAIC)
 summary(hybridoptimalBIC)
-
 ```
 
-We compute the Variance Inflation Factors (VIF) for the BIC model and see that there are numerous values that are at least 5 indicating that we have multicollinearity. Specifically, we see a VIF of at least 10 in Percent Married and a VIF of 8 in Percent Married Households. As well as in log(Median Income), Percent Employed 16 and Over, Percent Employers Private Coverage and Percent Private Coverage.
+Below we see the residual plots for the stepwise BIC model and can see in the left plot that we appear to have constant variance and the residuals have a mean of zero satisfying these assumptions. 
+
+```{r stepwise plots,echo=FALSE}
+plot(hybridoptimalBIC,which=1)
+```
+
+
+We compute the Variance Inflation Factors (VIF) for the BIC model and see that there are numerous values that are at least 5 indicating that we have multicollinearity. Specifically, we see a VIF of at least 10 in Percent Married and a VIF of 8 in Percent Married Households. As well as in log(Median Income), Percent Employed 16 and Over, Percent Employers Private Coverage and Percent Private Coverage. Due to this frequent multicollinearity between the predictors in the stepwise model this suggests that the stepwise model is not a suitable approach as multicollinearity is not taken into account and thus we proceed below with stepwise regression with the states where we encounter a similar problem and further to Ridge Regression and Lasso to reduce the effects of multicollinearity on the model.
 
 ```{r StepwiseVIF, include=FALSE}
 # Computing the VIF of the BIC stepwise regression model
 vif(hybridoptimalBIC)
-
-```
-
-Thus we remove the variables with the highest VIF out of the model, namely Percent Married and Percent Private Coverage. From the summary of this updated model Percent Married Households is no longer significant, so we remove it from the model and see in this further updated model that all coefficients are significant and have VIF less than 5.
-
-```{r updatestepwise, include=FALSE}
-# Update the BIC model removing high VIF predictors
-updateBIC = lm(deathRate~logmedincome+incidenceRate+PctEmpPrivCoverage+PctEmployed16_Over+Edu18_24+logpctblack+PctMarriedHouseholds+MedianAgeFemale,cancermodel)
-summary(updateBIC)
-
-# Update further BIC model removing insignificant variable
-updateBIC2 = lm(deathRate~logmedincome+incidenceRate+PctEmpPrivCoverage+PctEmployed16_Over+Edu18_24+logpctblack+MedianAgeFemale,cancermodel)
-summary(updateBIC2)
-vif(updateBIC2)
-
-```
-
-For this updated model as all the coefficients are significant and the VIF for all variables are less than 5 we produce residual plots, as can be seen below, in Figure XXX. From the plots we can see that this model satisfies the assumptions of homeoscedasticity and normality. In the left plot we see a horizontal line about zero indicating the errors have zero mean and a constant variance and spread of points giving us constant variance in the errors. This is also supported through the non-constant variance test function from the car package which gives a p-value of 0.29215, hence we accept the null hypothesis that the errors have a constant variance. In the right plot we see a QQ plot and see that the majority of points appear to be either on or close to the dotted reference line. Thus, suggesting that the errors are normally distributed.
-
-```{r ncvtest,include=FALSE}
-# Performing non-constant variance test
-ncvTest(updateBIC2)
-
-```
-
-```{r updateBIC Plots, echo=FALSE}
-# Producing residual plots for updateBIC2 model
-par(mfrow=c(1,2))
-plot(updateBIC2,which=c(1,2))
-
 ```
 
 Now we perform stepwise with states included as a factor and as can be seen in both the AIC and BIC case the factor State is kept in the model and otherwise the other variables included are similar with the main different exclusion being log(Percent Black) which was included in the model without the addition of the states.
@@ -200,7 +173,6 @@ hybridoptimalAIC2 = step(c0,direction="both",
 scope=list("lower"=c0,"upper"=cmax),trace=0)
 hybridoptimalBIC2 = step(c0,direction="both",
 scope=list("lower"=c0,"upper"=cmax),trace=0,k=log(3044))
-
 ```
 
 We see from the summary output that the majority of the coefficients are significant with the departures from this coming from the State factor variable for certain states. In the AIC model we see that Poverty Percent is not significant with a p value of 0.0628, however we see in the BIC model this variable is dropped and as Poverty Percent will have a high correlation with Percent Unemployed 16 and Over we adopt the BIC model.
@@ -211,35 +183,28 @@ coef(hybridoptimalAIC2)
 coef(hybridoptimalBIC2)
 summary(hybridoptimalAIC2)
 summary(hybridoptimalBIC2)
-
 ```
 
-Below in Figure XXX we can see the residual and QQplot for the BIC model. In the residual plot on the left hand side we see constant variance and a mean of zero with the majority of points near the horizontal red line. This is similar to what we saw when we didn't include the states in the selection process. Similarly, we see in the QQplot the majority of points on or near the reference line suggesting that the errors are indeed normally distributed, again as we see in the above case of not including states in the selection process.
+Below we can see the residual and QQplot for the BIC model. In the residual plot on the left hand side we see constant variance and a mean of zero with the majority of points near the horizontal red line. This is similar to what we saw when we didn't include the states in the selection process. Similarly, we see in the QQplot the majority of points on or near the reference line suggesting that the errors are indeed normally distributed, again as we see in the above case of not including states in the selection process.
 
 ```{r statestepwise 3, echo=FALSE}
 # Residual plots of state stepwise regression
 par(mfrow=c(1,2))
 plot(hybridoptimalBIC2, which=c(1,2))
-
 ```
 
-In order to test whether the addition of states in the model makes a significant difference on the model in the stepwise selection process we perform an F-Test using the anova function. Computing this we get a p-value of less than 2.2x10^-16, thus giving us strong evidence that we should reject the null hypothesis that the model not including states is better. Hence, the BIC model including the states as a factor variable is a better fit of the data according to the anova function.
+In order to test whether the addition of states in the model makes a significant difference on the model in the stepwise selection process we perform an F-Test using the anova function. Computing this we get a p-value of less than $2.2x10^-16$, thus giving us strong evidence that we should reject the null hypothesis that the model not including states is better. Hence, the BIC model including the states as a factor variable is a better fit of the data according to the anova function.
 
 ```{r statestepwise 4, include=FALSE}
 # Perform F-Test on the BIC models above
-anova(updateBIC2,hybridoptimalBIC2)
-
-summary(updateBIC2)
-
+anova(hybridoptimalBIC,hybridoptimalBIC2)
 ```
 
+To complete the section on stepwise regression we perform leave one out cross validation in order to compute the $R^2$ of the stepwise models and also the Root Mean Squared Error. This allows us to compare these models with the Ridge and Lasso models we generate in the enxt sections. Performing this we see the AIC has an $R^2$ value of 0.4629, whereas in the BIC model we have an $R^2$ value of 0.4621.
+
 ```{r LOOCVforStepwise, cache=TRUE, include=FALSE}
-
 library(caret)
-
 #specify the cross-validation method
-
-
 #fit a regression model and use LOOCV to evaluate performance
 loocv <- function(lm1, data=cancer) {
   ctrl <- trainControl(method = "LOOCV")
@@ -248,12 +213,9 @@ loocv <- function(lm1, data=cancer) {
   model <- train(fmla, data = data, method = "lm", trControl = ctrl)
   return(model)
 }
-
 hybridoptimalAIC.loocv <- loocv(hybridoptimalAIC, data=cancermodel)
-
+hybridoptimalBIC.loocv <- loocv(hybridoptimalBIC,data=cancermodel)
 ```
-
-
 ### RIDGE Regression
 
 To address the multi-collinearity present in the data we assess the viability of a RIDGE Regression Model. For this we fit all continuous variables as predictors using the `glmnet` library. 
